Fix bug in spacing mixin.

--- a/assets/sass/mixins/spacing/_spacing.scss
+++ b/assets/sass/mixins/spacing/_spacing.scss
@@ -32,7 +32,7 @@
 }
 
 @mixin margin-inline-end($x, $unit: 'rem') {
-  @include spacing(margin-block-end, $x, $unit);
+  @include spacing(margin-inline-end, $x, $unit);
 }
 
 @mixin margin-block($x, $unit: 'rem') {
